<resources>
    <string name="app_name">GPA_10843858_Calculator</string>
    <string name="gpa_calculator">GPA Calculator!</string>
    <string name="grade_1">Grade 1:</string>
    <string name="grade_2">Grade 2:</string>
    <string name="calculate">Calculate!</string>
    <string name="average">Average:</string>
    <string name="grade_3">Grade 3:</string>
    <string name="grade_4">Grade 4:</string>
    <string name="grade_5">Grade 5:</string>
    <string name="textview">TextView</string>
    <string name="calculate_gpa">Calculate GPA!</string>
</resources>
